@@ -1,3 +1,13 @@
+2007-04-13  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-ruby.el (flymake-ruby-init): apply patch #10056, thanks Rémi Vanicat
+
+	* rails-core.el (rails-core:class-by-file): handle first digit[s] in filename
+
+	* rails-lib.el (capital-word-p): return nil if first char is not 
+
+	* inflections.el: rollback to using separate variables instead of structure
+
 2007-04-12  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-test.el: fixed #10053 bug, added rails-core:regexp-for-match-views to compilation-error-regexp
